# pydantic-config-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
src/: __init__.py  pydantic_config_generator.py  pydic.py
tests/: environ.py  environ.sh  fields.py
