[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydic"
version = "0.1.0"
description = "Interactive configuration prompt for Pydantic models"
requires-python = ">=3.7"
dependencies = [
    "pydantic>=1.0,<2.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/pydic"
Repository = "https://github.com/yourusername/pydic"

[tool.setuptools]
packages = ["pydic"]

[tool.setuptools.package-dir]
pydic = "src"

